- Use a config option/flag to set the INX address instead of using the environment

--- a/config.json
+++ b/config.json
@@ -1,10 +1,8 @@
 {
   "indexer": {
-    "bindAddress": "localhost:9091",
     "maxPageSize": 1000
   },
   "prometheus": {
-    "enabled": true,
-    "bindAddress": "localhost:9312"
+    "enabled": true
   }
 }
