--- a/.github/workflows/test-docs-build.yml
+++ b/.github/workflows/test-docs-build.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
+          cache-dependency-path: documentation/yarn.lock
       - name: Allow modern Yarn
         run: |
           corepack enable
