- Added HTTP and INX metrics to prometheus

--- a/config_defaults.json
+++ b/config_defaults.json
@@ -23,6 +23,8 @@
     "bindAddress": "localhost:9312",
     "goMetrics": false,
     "processMetrics": false,
+    "restAPIMetrics": true,
+    "inxMetrics": true,
     "promhttpMetrics": false
   }
 }
