Add parameter for AdvertiseAddress (#71)
* Add parameter for AdvertiseAddress

* Move maxPageSize to restAPI

--- a/config_defaults.json
+++ b/config_defaults.json
@@ -26,8 +26,11 @@
   "indexer": {
     "db": {
       "path": "database"
-    },
+    }
+  },
+  "restAPI": {
     "bindAddress": "localhost:9091",
+    "advertiseAddress": "",
     "maxPageSize": 1000,
     "debugRequestLoggerEnabled": false
   },
