Added full PostgreSQL support

--- a/config_defaults.json
+++ b/config_defaults.json
@@ -26,7 +26,17 @@
   },
   "indexer": {
     "db": {
-      "path": "database"
+      "engine": "sqlite",
+      "sqlite": {
+        "path": "database"
+      },
+      "postgresql": {
+        "database": "indexer",
+        "username": "indexer",
+        "password": "",
+        "host": "localhost",
+        "port": 5432
+      }
     }
   },
   "restAPI": {
