Added snap-to-db tool that allows to create an indexer database out of a full snapshot file

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -67,7 +67,7 @@ linters:
         - goimports
         - golint
         #- gomnd
-        - gomoddirectives
+        #- gomoddirectives
         - gomodguard
         - goprintffuncname
         - gosec
