--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build
         run: go build -v .
 
+      - name: Test
+        run: go test ./...
+
   build_docker:
     name: Docker
     runs-on: ubuntu-latest
